# vibe-math

./: .env.backup  .env.example  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  IOS_SHORTCUTS_INTEGRATION.md  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
.huggingface/: README.md
api/: health.js  solve-json.js  solve-with-key.js
app/: config.py  main.py
docs/: API.md  IOS_INSTALLATION_GUIDE.md  IOS_SHORTCUTS.md
ios-shortcuts/: README.md  VibeMath-Lite.shortcut  VibeMath.shortcut  vibemath1.shortcut  vibemath1lite.shortcut
tests/: test_main.py
